--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Arimo" />
   <script src="js/scripts.js"></script>
   <p>
-    297 Lancaster Rd, Ascot, 4007  <br>
-    Personal Phone: 0475382224 <br>
+    Personal Phone: upon request <br>
     DOB: 21/07/1998 <br>
     Email: <a href="mailto:dgilb19@gmail.com">dgilb19@gmail.com</a> <br>
     Linkedin: <a href="www.linkedin.com/in/daniel-a-gilbert"> Daniel .a Gilbert</a>
